--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 body {
-  margin: 0px;
-  background-color: rgb(23, 22, 22);
+  background-color: white;
+}
+
+#chessboard {
+  width: 400px;
+  height: 400px;
+  background-color: black;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 #startBtn {
@@ -10,10 +19,11 @@ body {
   color: black;
   border-radius: 15px;
   cursor: pointer;
+  border: none;
 }
 
 #startBtn:hover {
-  width: 115px;
+  width: 105px;
   background-color: aqua;
 }
 
@@ -33,5 +43,56 @@ body {
 }
 
 #pClock {
-  color: white;
+  color: black;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: medium;
+}
+
+.piece {
+  width: 30px;
+  height: 30px;
+  color: black;
+  cursor: pointer;
+}
+
+.piece:active {
+  background-color: gold;
+}
+
+#endBtn {
+  background-color: red;
+  border: none;
+  width: 100px;
+  height: 40px;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+#endBtn:hover {
+  width: 115px;
+  background-color: rgba(255, 0, 0, 0.63);
+}
+
+.square {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+}
+
+.square svg {
+  height: 30px;
+  width: 30px;
+  margin: 5px;
+}
+
+
+.beige {
+  background-color: beige
+}
+
+.white {
+  background-color: white;
 }
