--- a/style.css
+++ b/style.css
@@ -49,15 +49,12 @@ body {
 }
 
 .piece {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   color: black;
   cursor: pointer;
 }
 
-.piece:active {
-  background-color: gold;
-}
 
 #endBtn {
   background-color: red;
@@ -79,7 +76,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
 }
 
 .square svg {
@@ -95,4 +91,8 @@ body {
 
 .white {
   background-color: white;
+}
+
+.selected {
+  background-color: gold;
 }
